# uplink-source-code

./: BUILDING.gles  BUILDING.linux  BUILDING.windows.txt  CMakeLists.txt  Readme.txt  readme.html  standard.mk  uuid
contrib/SDL2_image-2.0.0/: CMakeLists.txt
contrib/SDL2_mixer-2.0.0/: CMakeLists.txt
contrib/freetype-2.5.0.1/: CMakeLists.txt
contrib/gltt-2.5/: BUGS  BottomText.C  FTBitmapFont.C  FTBitmapFont.h  FTEngine.C  FTEngine.h  FTFont.h  FTGlyph.C  FTGlyphVectorizer.C  FTInstance.h  GLTTBitmapFont.C  GLTTGlyphPolygonizer.C  GLTTGlyphPolygonizer.h  GLTTGlyphPolygonizerHandler.C  GLTTGlyphPolygonizerHandler.h  GLTTGlyphTriangulator.C  GLTTPixmapFont.C  GLTTboolean.h  GLTTminmax.h  INSTALL  Makefile.in  acinclude.m4  configure  configure.in  delays.C  demo.C
contrib/gltt-2.5/CygnusGL/: README
contrib/gltt-2.5/vc5/: demo.001  demo.dsp  gltt.sln  vc5.vcproj
contrib/tcp4u.331/: CMakeLists.txt  VENDINFO.DIZ  file_id.diz  tcp4u331.txt
contrib/tcp4u.331/Include/: smtp4u.h  tcp4u.h  udp4u.h
contrib/tcp4u.331/Samples/Http1/: http_get.c
contrib/tcp4u.331/Samples/Smtp1/: snd_mail.c
contrib/tcp4u.331/Samples/Tcp1/: mFtp.c
contrib/tcp4u.331/Samples/Tcp3/: mini_Ftp.c
contrib/tcp4u.331/Samples/Udp1/: recho.c  secho.c
contrib/tcp4u.331/Unix/: INSTALL  OSname
contrib/tcp4u.331/doc/: tcp4u.htm  tcp4u_p1.htm  tcp4u_p3.htm  tcp4u_p4.htm  tcp4u_p6.htm
contrib/tcp4u.331/src/: build.h  dimens.h  port.h  skt4u.c  tcp4u.c  tcp4u_ex.c  udp4u.c  util.c
contrib/tcp4u.331/tcp4w16/: TCP4W.MAK  tcp4w.def
contrib/tcp4u.331/tcp4w16l/: TCP4WLIB.LIB
contrib/tcp4u.331/tcp4w32/: tcp4w32.dsp  tcp4w32.lib  tcp4w32.mak
contrib/tcp4u.331/u2d/: u2d.c
contrib/tiff-4.0.3/: CMakeLists.txt
contrib/tiff-4.0.3/libtiff/: tif_config.h.cmake.in
contrib/unrar/: CMakeLists.txt  Unrar.vcproj  Unrar.vcxproj  array.h  os.h
contrib/unrar/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  vc100.idb
contrib/unrar/Unoptimised/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
lib/gucci/: CMakeLists.txt  Gucci.sln  Gucci.vcproj  Gucci.vcxproj  Gucci.vcxproj.filters  drawable.cpp  drawable.hpp  eglport.cpp  eglport.h  gucci.cpp  gucci.h  gucci.hpp  gucci_glut.cpp  gucci_internal.h  gucci_sdl.cpp  image.cpp  image.h  image.hpp  makefile  resize_unix.cpp  resize_win32.cpp  text.cpp  text.hpp
lib/gucci/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  vc100.idb
lib/gucci/Unoptimised/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
lib/gucci/ftgl/: Makefile  Makefile.am  Makefile.in
lib/gucci/ftgl/FTGL/: ftglesGlue.h
uplink/src/: CMakeLists.txt  ExceptionHandler.cpp  GetWinVer.cpp  Makefile  MiniVersion.cpp  UpgradeLog.XML  UpgradeLog.htm  Uplink.opensdf  Uplink.sln  Uplink.sln.old  Uplink.vcproj  Uplink.vcxproj  Uplink.vcxproj.filters  auto-depend.mk.old  darwinia.cpp  darwinia.h  makefile.old  resource.h  resources.rc  stdafx.h  uplink.cpp  version.cpp
uplink/src/Debug/: CL.read.1.tlog  CL.write.1.tlog  Uplink_manifest.rc  cl.command.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
uplink/src/Unoptimised/: CL.read.1.tlog  CL.write.1.tlog  Uplink.lastbuildstate  Uplink_manifest.rc  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
uplink/src/app/: app.cpp  app.h  decode.c  dos2unix.h  globals.h  globals_defines.h  miscutils.cpp  miscutils.h  opengl.cpp  opengl.h  opengl_interface.cpp  opengl_interface.h  probability.cpp  probability.h  serialise.cpp  serialise.h  uplinkobject.cpp  uplinkobject.h
uplink/src/game/: game.cpp  game.h  gameobituary.cpp  gameobituary.h  scriptlibrary.cpp  scriptlibrary.h
uplink/src/game/data/: data.cpp  data.h
uplink/src/interface/: interface.cpp  interface.h  interfacescreen.cpp  interfacescreen.h  scrollbox.cpp  scrollbox.h
uplink/src/interface/localinterface/: analyser_interface.cpp  analyser_interface.h  cheat_interface.cpp  cheat_interface.h  email_interface.cpp  email_interface.h  evtqueue_interface.cpp  evtqueue_interface.h  finance_interface.cpp  finance_interface.h  gateway_interface.cpp  gateway_interface.h  hud_interface.cpp  hud_interface.h  hw_interface.cpp  hw_interface.h  irc_interface.cpp  irc_interface.h  (+24 more)
uplink/src/mainmenu/: closing_interface.cpp  closing_interface.h  connectionlost_interface.cpp  connectionlost_interface.h  demogameover_interface.cpp  demogameover_interface.h  disavowed_interface.cpp  disavowed_interface.h  firsttimeloading_interface.cpp  firsttimeloading_interface.h  genericoptions_interface.cpp  genericoptions_interface.h  graphicoptions_interface.cpp  graphicoptions_interface.h  loading_interface.cpp  loading_interface.h  login_interface.cpp  login_interface.h  mainmenu.cpp  mainmenu.h  mainmenuscreen.cpp  mainmenuscreen.h  networkoptions_interface.cpp  networkoptions_interface.h  obituary_interface.cpp  obituary_interface.h  options_interface.cpp  options_interface.h  revelationlost_interface.cpp  revelationlost_interface.h  revelationwon_interface.cpp  revelationwon_interface.h  theme_interface.cpp  theteam_interface.cpp  theteam_interface.h  warezgameover_interface.cpp  warezgameover_interface.h
uplink/src/network/: clientconnection.cpp  network.cpp  networkclient.cpp  networkclient.h  networkserver.cpp  networkserver.h
uplink/src/options/: options.cpp  options.h
uplink/src/uplinkHD/: HD_ColorPalettes.cpp  HD_ColorPalettes.h  HD_Mouse.cpp  HD_Mouse.h  HD_Resources.cpp  HD_Resources.h  HD_Screen.cpp  HD_Screen.h
uplink/src/view/: fps.cpp  fps.h  view.cpp  view.h
uplink/src/world/: Player.h  VLocation.h  agent.cpp  agent.h  connection.cpp  date.cpp  date.h  message.cpp  message.h  person.cpp  person.h  player.cpp  rating.cpp  rating.h  vlocation.cpp  world.cpp  world.h
(+1748 files in other folders)
