cmake_minimum_required(VERSION 2.8)

set(SDL_MIXER_SOURCES
    "dynamic_flac.h"
    "dynamic_fluidsynth.h"
    "dynamic_mod.h"
    "dynamic_modplug.h"
    "dynamic_mp3.h"
    "dynamic_ogg.h"
    "effects_internal.h"
    "fluidsynth.h"
    "load_aiff.h"
    "load_flac.h"
    "load_ogg.h"
    "load_voc.h"
    "music_cmd.h"
    "music_flac.h"
    "music_mad.h"
    "music_mod.h"
    "music_modplug.h"
    "music_ogg.h"
    "SDL_mixer.h"
    "wavestream.h"
    "dynamic_flac.c"
    "dynamic_fluidsynth.c"
    "dynamic_mod.c"
    "dynamic_modplug.c"
    "dynamic_mp3.c"
    "dynamic_ogg.c"
    "effect_position.c"
    "effect_stereoreverse.c"
    "effects_internal.c"
    "fluidsynth.c"
    "load_aiff.c"
    "load_flac.c"
    "load_ogg.c"
    "load_voc.c"
    "mixer.c"
    "music.c"
    "music_cmd.c"
    "music_flac.c"
    "music_mad.c"
    "music_mod.c"
    "music_modplug.c"
    "music_ogg.c"
    "wavestream.c"
    "version.rc")
add_library(SDL2_mixer SHARED ${SDL_MIXER_SOURCES})
target_compile_definitions(SDL2_mixer PRIVATE -DMOD_MUSIC)
target_link_libraries(SDL2_mixer SDL2main SDL2 mikmod)
