cmake_minimum_required(VERSION 2.8)

set(UNRAR_SOURCES
    "archive.h"
    "array.h"
    "cmddata.h"
    "compress.h"
    "consio.h"
    "crc.h"
    "crypt.h"
    "encname.h"
    "errhnd.h"
    "extinfo.h"
    "extract.h"
    "filcreat.h"
    "file.h"
    "filefn.h"
    "filestr.h"
    "find.h"
    "getbits.h"
    "global.h"
    "headers.h"
    "int64.h"
    "isnt.h"
    "list.h"
    "loclang.h"
    "match.h"
    "memfree.h"
    "options.h"
    "os.h"
    "pathfn.h"
    "rarbloat.h"
    "rardefs.h"
    "rarfn.h"
    "rarlang.h"
    "raros.h"
    "rarresource.h"
    "rartypes.h"
    "rarvm.h"
    "rawread.h"
    "rdwrfn.h"
    "recvol.h"
    "rijndael.h"
    "rs.h"
    "savepos.h"
    "scantree.h"
    "sha1.h"
    "smallfn.h"
    "strfn.h"
    "strlist.h"
    "suballoc.h"
    "system.h"
    "timefn.h"
    "ulinks.h"
    "unicode.h"
    "unpack.h"
    "unrar.h"
    "version.h"
    "volume.h"
    "archive.cpp"
    "arcread.cpp"
    "cmddata.cpp"
    "consio.cpp"
    "crc.cpp"
    "crypt.cpp"
    "encname.cpp"
    "errhnd.cpp"
    "extinfo.cpp"
    "extract.cpp"
    "filcreat.cpp"
    "file.cpp"
    "filefn.cpp"
    "filestr.cpp"
    "find.cpp"
    "getbits.cpp"
    "global.cpp"
    "int64.cpp"
    "isnt.cpp"
    "list.cpp"
    "match.cpp"
    "options.cpp"
    "pathfn.cpp"
    "rarbloat.cpp"
    "rarresource.cpp"
    "rarvm.cpp"
    "rarvmtbl.cpp"
    "rawread.cpp"
    "rdwrfn.cpp"
    "recvol.cpp"
    "rijndael.cpp"
    "rs.cpp"
    "savepos.cpp"
    "scantree.cpp"
    "sha1.cpp"
    "smallfn.cpp"
    "strfn.cpp"
    "strlist.cpp"
    "suballoc.cpp"
    "system.cpp"
    "timefn.cpp"
    "ulinks.cpp"
    "unicode.cpp"
    "unpack.cpp"
    "unrar.cpp"
    "volume.cpp")
add_library(unrar STATIC ${UNRAR_SOURCES})
