set(UPLINK_SRCS
    app/binreloc.cpp
    app/app.cpp
    app/dos2unix.cpp
    app/miscutils.cpp
    app/opengl.cpp
    app/opengl_interface.cpp
    app/probability.cpp
    app/serialise.cpp
    app/uplinkobject.cpp
    game/data/data.cpp
    game/game.cpp
    game/gameobituary.cpp
    game/scriptlibrary.cpp
    interface/interface.cpp
    interface/interfacescreen.cpp
    interface/localinterface/analyser_interface.cpp
    interface/localinterface/cheat_interface.cpp
    interface/localinterface/email_interface.cpp
    interface/localinterface/evtqueue_interface.cpp
    interface/localinterface/finance_interface.cpp
    interface/localinterface/gateway_interface.cpp
    interface/localinterface/hud_interface.cpp
    interface/localinterface/hw_interface.cpp
    interface/localinterface/irc_interface.cpp
    interface/localinterface/keyboardinterface.cpp
    interface/localinterface/lan_interface.cpp
    interface/localinterface/localinterface.cpp
    interface/localinterface/localinterfacescreen.cpp
    interface/localinterface/memory_interface.cpp
    interface/localinterface/mission_interface.cpp
    interface/localinterface/phonedialler.cpp
    interface/localinterface/sendmail_interface.cpp
    interface/localinterface/status_interface.cpp
    interface/localinterface/sw_interface.cpp
    interface/localinterface/worldmap/worldmap_interface.cpp
    interface/localinterface/worldmap/worldmap_layout.cpp
    interface/remoteinterface/academicscreen_interface.cpp
    interface/remoteinterface/accountscreen_interface.cpp
    interface/remoteinterface/bbsscreen_interface.cpp
    interface/remoteinterface/changegatewayscreen_interface.cpp
    interface/remoteinterface/codecardscreen_interface.cpp
    interface/remoteinterface/companyinfoscreen_interface.cpp
    interface/remoteinterface/consolescreen_interface.cpp
    interface/remoteinterface/contactscreen_interface.cpp
    interface/remoteinterface/criminalscreen_interface.cpp
    interface/remoteinterface/cypherscreen_interface.cpp
    interface/remoteinterface/dialogscreen_interface.cpp
    interface/remoteinterface/disconnectedscreen_interface.cpp
    interface/remoteinterface/faithscreen_interface.cpp
    interface/remoteinterface/fileserverscreen_interface.cpp
    interface/remoteinterface/highsecurityscreen_interface.cpp
    interface/remoteinterface/hwsalesscreen_interface.cpp
    interface/remoteinterface/linksscreen_interface.cpp
    interface/remoteinterface/loansscreen_interface.cpp
    interface/remoteinterface/logscreen_interface.cpp
    interface/remoteinterface/menuscreen_interface.cpp
    interface/remoteinterface/messagescreen_interface.cpp
    interface/remoteinterface/nearestgatewayscreen_interface.cpp
    interface/remoteinterface/newsscreen_interface.cpp
    interface/remoteinterface/nuclearwarscreen_interface.cpp
    interface/remoteinterface/passwordscreen_interface.cpp
    interface/remoteinterface/protovisionscreen_interface.cpp
    interface/remoteinterface/radiotransmitterscreen_interface.cpp
    interface/remoteinterface/rankingscreen_interface.cpp
    interface/remoteinterface/recordscreen_interface.cpp
    interface/remoteinterface/remoteinterface.cpp
    interface/remoteinterface/remoteinterfacescreen.cpp
    interface/remoteinterface/securityscreen_interface.cpp
    interface/remoteinterface/shareslistscreen_interface.cpp
    interface/remoteinterface/sharesviewscreen_interface.cpp
    interface/remoteinterface/socialsecurityscreen_interface.cpp
    interface/remoteinterface/swsalesscreen_interface.cpp
    interface/remoteinterface/useridscreen_interface.cpp
    interface/remoteinterface/voiceanalysisscreen_interface.cpp
    interface/remoteinterface/voicephonescreen_interface.cpp
    interface/scrollbox.cpp
    interface/taskmanager/decrypter.cpp
    interface/taskmanager/decypher.cpp
    interface/taskmanager/defrag.cpp
    interface/taskmanager/dictionaryhacker.cpp
    interface/taskmanager/faith.cpp
    interface/taskmanager/filecopier.cpp
    interface/taskmanager/filedeleter.cpp
    interface/taskmanager/firewalldisable.cpp
    interface/taskmanager/gatewaynuke.cpp
    interface/taskmanager/iplookup.cpp
    interface/taskmanager/ipprobe.cpp
    interface/taskmanager/lanforce.cpp
    interface/taskmanager/lanprobe.cpp
    interface/taskmanager/lanscan.cpp
    interface/taskmanager/lanspoof.cpp
    interface/taskmanager/logdeleter.cpp
    interface/taskmanager/logmodifier.cpp
    interface/taskmanager/logundeleter.cpp
    interface/taskmanager/motionsensor.cpp
    interface/taskmanager/passwordbreaker.cpp
    interface/taskmanager/proxydisable.cpp
    interface/taskmanager/revelation.cpp
    interface/taskmanager/revelationtracker.cpp
    interface/taskmanager/securitybypass.cpp
    interface/taskmanager/taskmanager.cpp
    interface/taskmanager/tracetracker.cpp
    interface/taskmanager/tutorial.cpp
    interface/taskmanager/uplinkagentlist.cpp
    interface/taskmanager/uplinktask.cpp
    interface/taskmanager/voiceanalyser.cpp
    mainmenu/closing_interface.cpp
    mainmenu/connectionlost_interface.cpp
    mainmenu/demogameover_interface.cpp
    mainmenu/disavowed_interface.cpp
    mainmenu/firsttimeloading_interface.cpp
    mainmenu/genericoptions_interface.cpp
    mainmenu/loading_interface.cpp
    mainmenu/login_interface.cpp
    mainmenu/mainmenu.cpp
    mainmenu/mainmenuscreen.cpp
    mainmenu/graphicoptions_interface.cpp
    mainmenu/networkoptions_interface.cpp
    mainmenu/obituary_interface.cpp
    mainmenu/options_interface.cpp
    mainmenu/revelationlost_interface.cpp
    mainmenu/revelationwon_interface.cpp
    mainmenu/theme_interface.cpp
    mainmenu/theteam_interface.cpp
    mainmenu/warezgameover_interface.cpp
    network/clientconnection.cpp
    network/interfaces/clientcommsinterface.cpp
    network/interfaces/clientstatusinterface.cpp
    network/interfaces/networkscreen.cpp
    network/network.cpp
    network/networkclient.cpp
    network/networkserver.cpp
    options/options.cpp
    uplink.cpp
    view/fps.cpp
    view/view.cpp
    world/agent.cpp
    world/company/company.cpp
    world/company/companyuplink.cpp
    world/company/mission.cpp
    world/company/news.cpp
    world/company/sale.cpp
    world/computer/bankaccount.cpp
    world/computer/bankcomputer.cpp
    world/computer/computer.cpp
    world/computer/computerscreen/bbsscreen.cpp
    world/computer/computerscreen/computerscreen.cpp
    world/computer/computerscreen/cypherscreen.cpp
    world/computer/computerscreen/dialogscreen.cpp
    world/computer/computerscreen/disconnectedscreen.cpp
    world/computer/computerscreen/genericscreen.cpp
    world/computer/computerscreen/highsecurityscreen.cpp
    world/computer/computerscreen/linksscreen.cpp
    world/computer/computerscreen/logscreen.cpp
    world/computer/computerscreen/menuscreen.cpp
    world/computer/computerscreen/messagescreen.cpp
    world/computer/computerscreen/passwordscreen.cpp
    world/computer/computerscreen/shareslistscreen.cpp
    world/computer/computerscreen/useridscreen.cpp
    world/computer/databank.cpp
    world/computer/gateway.cpp
    world/computer/gatewaydef.cpp
    world/computer/lancomputer.cpp
    world/computer/lanmonitor.cpp
    world/computer/logbank.cpp
    world/computer/recordbank.cpp
    world/computer/security.cpp
    world/computer/securitymonitor.cpp
    world/computer/securitysystem.cpp
    world/connection.cpp
    world/date.cpp
    world/generator/consequencegenerator.cpp
    world/generator/demoplotgenerator.cpp
    world/generator/langenerator.cpp
    world/generator/missiongenerator.cpp
    world/generator/namegenerator.cpp
    world/generator/newsgenerator.cpp
    world/generator/numbergenerator.cpp
    world/generator/plotgenerator.cpp
    world/generator/recordgenerator.cpp
    world/generator/worldgenerator.cpp
    world/message.cpp
    world/person.cpp
    world/player.cpp
    world/rating.cpp
    world/scheduler/arrestevent.cpp
    world/scheduler/attemptmissionevent.cpp
    world/scheduler/bankrobberyevent.cpp
    world/scheduler/changegatewayevent.cpp
    world/scheduler/eventscheduler.cpp
    world/scheduler/installhardwareevent.cpp
    world/scheduler/notificationevent.cpp
    world/scheduler/runplotsceneevent.cpp
    world/scheduler/seizegatewayevent.cpp
    world/scheduler/shotbyfedsevent.cpp
    world/scheduler/uplinkevent.cpp
    world/scheduler/warningevent.cpp
    world/vlocation.cpp
    world/world.cpp
)

include_directories(.)
include_directories(${PROJECT_SOURCE_DIR}/contrib/tcp4u.331/Include)
include_directories(${PROJECT_SOURCE_DIR}/contrib/irclib)
include_directories(${PROJECT_SOURCE_DIR}/contrib/irclib/linux)

if(${UPLINK_BUILD_TYPE} STREQUAL "Demo")
    add_definitions(-DDEMOGAME=1)
else()
    add_definitions(-DFULLGAME=1)
endif()

add_executable(uplink WIN32 ${UPLINK_SRCS})

target_link_libraries( uplink
    eclipse
    gucci
    mmgr
    redshirt
    soundgarden
    vanbakel
    bungle

    irclib
    tcp4u
    unrar

    ${FTGL_LIBRARY}
    ${OPENGL_gl_LIBRARY}
    ${OPENGL_glu_LIBRARY}
    ${SDL_LIBRARY}
    ${SDLMIXER_LIBRARY}
    ${TIFF_LIBRARY}
)

if(UNIX AND ${CMAKE_SIZEOF_VOID_P} EQUAL 8)
    set_target_properties(uplink PROPERTIES SUFFIX ".bin.x86_64")
elseif(UNIX AND ${CMAKE_SIZEOF_VOID_P} EQUAL 4)
set_target_properties(uplink PROPERTIES SUFFIX ".bin.x86")
endif()

install(TARGETS uplink
    RUNTIME DESTINATION .
)